--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 body{
     margin: 0;
     padding: 0;
-    font-family: cursive;
+    font-family: 'Poppins', sans-serif;
     background: #faf8ff;
     box-sizing: border-box;
 }
@@ -30,7 +30,6 @@ nav{
     display: flex;
     justify-content: space-around;
     width: 90%;
-    font-family: sans-serif;
 } 
 
 .navigasi li, .navigasi-desktop li {
